# warehouse_ros-release

./: .pre-commit-config.yaml  CHANGELOG.rst  CMakeLists.txt  README.md  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
.github/workflows/: build_and_test.yaml
debian/: changelog  control  copyright  gbp.conf  rules
include/warehouse_ros/: transform_collection.h
rpm/: ros-galactic-warehouse-ros.spec  ros-jazzy-warehouse-ros.spec  ros-kilted-warehouse-ros.spec  ros-rolling-warehouse-ros.spec  template.spec
